I ended progress activity

--- a/app/src/main/res/layout/activity_general_statistic.xml
+++ b/app/src/main/res/layout/activity_general_statistic.xml
@@ -51,7 +51,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Training Data" />
+                android:text="-" />
 
         </TableRow>
 
@@ -71,7 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Training Data" />
+                android:text="-" />
 
         </TableRow>
 
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Training Data" />
+                android:text="-" />
 
         </TableRow>
 
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Training Data" />
+                android:text="-" />
 
         </TableRow>
 
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="448dp"
         android:layout_weight="1"
-        android:text="Kcal"
+        android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:layout_weight="1"
-        android:text="Distance"
+        android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -213,7 +213,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
-        android:text="Distance"
+        android:text="-"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
