--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -79,4 +79,14 @@
         <item name="android:layout_marginEnd">20dp</item>
     </style>
 
+    <style name="NewFontStyleProgresTable" parent="android:Widget.TextView">
+        <item name="android:textSize">20sp</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="NewFontStyleProgresTableHeader" parent="android:Widget.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
